--- a/skyeng/index.html
+++ b/skyeng/index.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Лэндинг пейдж для SkyEng</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=384377044"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=13400689" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4225865557" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3823815044" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=349363884" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -150,9 +150,9 @@ transform-origin: 50% 50%;
       <div id="u247"><!-- column -->
        <div class="clearfix" id="u247_align_to_page">
         <a class="anchor_item colelem shared_content" id="about" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="about_content"></a>
-        <div class="H3 clearfix colelem shared_content" id="u256-6" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u256-6_content"><!-- content -->
-         <h3>Skyeng – крупнейшая онлайн школа</h3>
-         <h3>английского языка в Восточной Европе</h3>
+        <div class="H3 clearfix colelem" id="u256-6" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
+         <h3 class="shared_content" data-content-guid="u256-6_0_content">Skyeng – крупнейшая онлайн школа</h3>
+         <h3 class="shared_content" data-content-guid="u256-6_1_content">английского языка в Восточной Европе</h3>
         </div>
         <div class="clearfix colelem" id="u9921"><!-- group -->
          <div class="clearfix grpelem shared_content" id="u9682" data-content-guid="u9682_content"><!-- column -->
@@ -530,14 +530,19 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="browser_width colelem temp_no_id" data-orig-id="u247-bw">
-      <div class="temp_no_id" data-orig-id="u247"><!-- column -->
+      <div class="temp_no_id" data-orig-id="u247"><!-- group -->
        <div class="clearfix temp_no_id" data-orig-id="u247_align_to_page">
-        <span class="anchor_item colelem placeholder" data-placeholder-for="about_content"><!-- placeholder node --></span>
-        <span class="H3 clearfix colelem placeholder" data-placeholder-for="u256-6_content"><!-- placeholder node --></span>
-        <div class="clearfix colelem temp_no_id" data-orig-id="u9921"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u9682_content"><!-- placeholder node --></span>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u9677_content"><!-- placeholder node --></span>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u9672_content"><!-- placeholder node --></span>
+        <span class="anchor_item grpelem placeholder" data-placeholder-for="about_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem" id="pu256-6"><!-- column -->
+         <div class="H3 clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu256-6" data-orig-id="u256-6"><!-- content -->
+          <span class="placeholder" data-placeholder-for="u256-6_0_content"><!-- placeholder node --></span>
+          <span class="placeholder" data-placeholder-for="u256-6_1_content"><!-- placeholder node --></span>
+         </div>
+         <div class="clearfix colelem temp_no_id" data-orig-id="u9921"><!-- column -->
+          <span class="clearfix colelem placeholder" data-placeholder-for="u9682_content"><!-- placeholder node --></span>
+          <span class="clearfix colelem placeholder" data-placeholder-for="u9677_content"><!-- placeholder node --></span>
+          <span class="clearfix colelem placeholder" data-placeholder-for="u9672_content"><!-- placeholder node --></span>
+         </div>
         </div>
        </div>
       </div>
@@ -738,14 +743,19 @@ transform-origin: 50% 50%;
       </div>
      </div>
      <div class="browser_width colelem temp_no_id" data-orig-id="u247-bw">
-      <div class="temp_no_id" data-orig-id="u247"><!-- column -->
+      <div class="temp_no_id" data-orig-id="u247"><!-- group -->
        <div class="clearfix temp_no_id" data-orig-id="u247_align_to_page">
-        <span class="anchor_item colelem placeholder" data-placeholder-for="about_content"><!-- placeholder node --></span>
-        <span class="H3 clearfix colelem placeholder" data-placeholder-for="u256-6_content"><!-- placeholder node --></span>
-        <div class="clearfix colelem temp_no_id" data-orig-id="u9921"><!-- column -->
-         <span class="clearfix colelem placeholder" data-placeholder-for="u9682_content"><!-- placeholder node --></span>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u9677_content"><!-- placeholder node --></span>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u9672_content"><!-- placeholder node --></span>
+        <span class="anchor_item grpelem placeholder" data-placeholder-for="about_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="pu256-6"><!-- column -->
+         <div class="H3 clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-leftAdjustmentDoneBy="pu256-6" data-orig-id="u256-6"><!-- content -->
+          <span class="placeholder" data-placeholder-for="u256-6_0_content"><!-- placeholder node --></span>
+          <span class="placeholder" data-placeholder-for="u256-6_1_content"><!-- placeholder node --></span>
+         </div>
+         <div class="clearfix colelem temp_no_id" data-orig-id="u9921"><!-- column -->
+          <span class="clearfix colelem placeholder" data-placeholder-for="u9682_content"><!-- placeholder node --></span>
+          <span class="clearfix colelem placeholder" data-placeholder-for="u9677_content"><!-- placeholder node --></span>
+          <span class="clearfix colelem placeholder" data-placeholder-for="u9672_content"><!-- placeholder node --></span>
+         </div>
         </div>
        </div>
       </div>
