--- a/alk/index.html
+++ b/alk/index.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=397393007"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3862013854"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4254102043" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=192932554" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3808492375"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=3799571708" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4293318679" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -59,7 +59,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
      <div class="transition clip_frame shared_content" id="u33476" data-content-guid="u33476_content"><!-- svg -->
-      <img class="svg temp_no_img_src shared_content" id="u33477" data-orig-src="images/logo.svg?crc=281243268" width="140" height="34" alt="" data-mu-svgfallback="images/logo_poster_.png?crc=428947547" src="images/blank.gif?crc=4208392903" data-content-guid="u33477_content"/>
+      <img class="svg temp_no_img_src" id="u33477" data-orig-src="images/logo.svg?crc=281243268" width="140" height="34" alt="" data-mu-svgfallback="images/logo_poster_.png?crc=428947547" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
     <div class="clearfix grpelem" id="pu248"><!-- column -->
@@ -654,48 +654,44 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <ul class="AccordionWidget clearfix temp_no_id" data-orig-id="accordionu33893"><!-- vertical box -->
       <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u33894"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u33904-3"><!-- content --><span class="placeholder" data-placeholder-for="u33904-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u33895"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="menuu33896"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u33897"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem temp_no_id" href="index.html" data-orig-id="u33900"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u33902-4"><!-- content --><span class="placeholder" data-placeholder-for="u33902-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
      </ul>
+     <span class="transition clip_frame placeholder" data-placeholder-for="u33476_content"><!-- placeholder node --></span>
     </div>
-    <div class="clearfix grpelem" id="ppu248"><!-- column -->
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu248"><!-- group -->
-      <div class="browser_width grpelem temp_no_id" data-orig-id="u248-bw">
-       <div class="museBGSize temp_no_id" data-orig-id="u248"><!-- column -->
-        <div class="clearfix temp_no_id" data-orig-id="u248_align_to_page">
-         <div class="clearfix colelem" id="u40847-6" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
-          <p>Производственно-коммерческое</p>
-          <p>предприятие «Альк»</p>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu248"><!-- column -->
+     <div class="browser_width colelem temp_no_id" data-orig-id="u248-bw">
+      <div class="museBGSize temp_no_id" data-orig-id="u248"><!-- column -->
+       <div class="clearfix temp_no_id" data-orig-id="u248_align_to_page">
+        <div class="clearfix colelem" id="u40847-6" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
+         <p>Производственно-коммерческое</p>
+         <p>предприятие «Альк»</p>
+        </div>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u284-6_content"><!-- placeholder node --></span>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u36658_content"><!-- placeholder node --></span>
+        <div class="SlideShowWidget clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="slideshowu304"><!-- none box -->
+         <div class="popup_anchor temp_no_id" data-orig-id="u308popup">
+          <div class="SlideShowContentPanel clearfix temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u308"><!-- stack box -->
+           <div class="SSSlide clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u311"><!-- image -->
+            <img class="block ImageInclude temp_no_id" data-src="images/1.png?crc=280978318" src="images/blank.gif?crc=4208392903" alt="" data-width="249" data-height="104" data-orig-id="u311_img"/>
+           </div>
+           <div class="SSSlide invi clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u313"><!-- image -->
+            <img class="block ImageInclude temp_no_id" data-src="images/2.png?crc=3897789641" src="images/blank.gif?crc=4208392903" alt="" data-width="280" data-height="117" data-orig-id="u313_img"/>
+           </div>
+           <div class="SSSlide invi clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u309"><!-- image -->
+            <img class="block ImageInclude temp_no_id" data-src="images/3.png?crc=3848728416" src="images/blank.gif?crc=4208392903" alt="" data-width="280" data-height="117" data-orig-id="u309_img"/>
+           </div>
+          </div>
          </div>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u284-6_content"><!-- placeholder node --></span>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u36658_content"><!-- placeholder node --></span>
-         <div class="SlideShowWidget clearfix colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="slideshowu304"><!-- none box -->
-          <div class="popup_anchor temp_no_id" data-orig-id="u308popup">
-           <div class="SlideShowContentPanel clearfix temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u308"><!-- stack box -->
-            <div class="SSSlide clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u311"><!-- image -->
-             <img class="block ImageInclude temp_no_id" data-src="images/1.png?crc=280978318" src="images/blank.gif?crc=4208392903" alt="" data-width="249" data-height="104" data-orig-id="u311_img"/>
-            </div>
-            <div class="SSSlide invi clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u313"><!-- image -->
-             <img class="block ImageInclude temp_no_id" data-src="images/2.png?crc=3897789641" src="images/blank.gif?crc=4208392903" alt="" data-width="280" data-height="117" data-orig-id="u313_img"/>
-            </div>
-            <div class="SSSlide invi clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u309"><!-- image -->
-             <img class="block ImageInclude temp_no_id" data-src="images/3.png?crc=3848728416" src="images/blank.gif?crc=4208392903" alt="" data-width="280" data-height="117" data-orig-id="u309_img"/>
-            </div>
-           </div>
+         <div class="popup_anchor temp_no_id" data-orig-id="u306-4popup">
+          <div class="SSPreviousButton clearfix temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u306-4"><!-- content -->
+           <span class="placeholder" data-placeholder-for="u306-4_0_content"><!-- placeholder node --></span>
           </div>
-          <div class="popup_anchor temp_no_id" data-orig-id="u306-4popup">
-           <div class="SSPreviousButton clearfix temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u306-4"><!-- content -->
-            <span class="placeholder" data-placeholder-for="u306-4_0_content"><!-- placeholder node --></span>
-           </div>
-          </div>
-          <div class="popup_anchor temp_no_id" data-orig-id="u325-4popup">
-           <div class="SSNextButton clearfix temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u325-4"><!-- content -->
-            <span class="placeholder" data-placeholder-for="u325-4_0_content"><!-- placeholder node --></span>
-           </div>
+         </div>
+         <div class="popup_anchor temp_no_id" data-orig-id="u325-4popup">
+          <div class="SSNextButton clearfix temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="u325-4"><!-- content -->
+           <span class="placeholder" data-placeholder-for="u325-4_0_content"><!-- placeholder node --></span>
           </div>
          </div>
         </div>
        </div>
-      </div>
-      <div class="transition clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fluidx" data-orig-id="u33476"><!-- svg -->
-       <span class="svg placeholder" data-placeholder-for="u33477_content"><!-- placeholder node --></span>
       </div>
      </div>
      <div class="browser_width colelem temp_no_id" data-orig-id="u278-bw">
