--- a/test/index.html
+++ b/test/index.html
@@ -14,11 +14,11 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <title>Портфолио | Тимофей Малахов</title>
+  <title>Портфолио</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=167251300"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=304632105" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4023605148" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
@@ -67,11 +67,11 @@ transform-origin: 50% 50%;
  <div class="dot"></div>
 	
 <div id="kont">
-  <video  loop  autoplay muted poster="assets/BG_PRESENTATION" id="bqqvid">
+  <video  loop  autoplay muted poster="assets/BG_PRESENTATION.jpg" id="bqqvid">
     <source src="assets/bg.mp4" type="video/mp4">
-    <source src="assets/File URL or name" type="video/ogg">
-    <source src="assets/File URL or name" type="video/ogv">
-    <source src="assets/File URL or name" type="video/webm">
+    <source src="assets/bg.ogg" type="video/ogg">
+    <source src="assets/bg.ogg" type="video/ogv">
+    <source src="assets/bg.webm" type="video/webm">
   </video>
   </div>
 </div>
@@ -102,7 +102,7 @@ transform-origin: 50% 50%;
          <a class="nonblock nontext MuseLinkActive transition clip_frame grpelem shared_content" id="u115" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u115_content"><!-- svg --><img class="svg temp_no_img_src" id="u111" data-orig-src="images/logo-(2).svg?crc=315416931" width="114" height="40" alt="" data-mu-svgfallback="images/logo%20(2)_poster_.png?crc=158501887" src="images/blank.gif?crc=4208392903"/></a>
          <nav class="MenuBar clearfix grpelem" id="menuu582" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- horizontal box -->
           <div class="MenuItemContainer clearfix grpelem" id="u657"><!-- vertical box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u658" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u661-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u661-4_0_content">Портфолио | Тимофей Малахов</p></div></a>
+           <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u658" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u661-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u661-4_0_content">Портфолио</p></div></a>
           </div>
           <div class="MenuItemContainer clearfix grpelem" id="u590"><!-- vertical box -->
            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u593" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u594-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u594-4_0_content">Обо мне</p></div></a>
@@ -186,7 +186,7 @@ video#bqqvid {
 position: fixed; right: 0; bottom: 0;
 min-width: 100%; min-height: 100%;
 width: auto; height: auto; z-index: -100;
-background: url(assets/BG_PRESENTATION) no-repeat;
+background: url(assets/BG_PRESENTATION.jpg) no-repeat;
 background-size: cover;
 }
 
@@ -227,7 +227,7 @@ z-index: -999;
 
 
 @media screen and (max-device-width: 800px) {
-html { background: url(assets/BG_PRESENTATION) #000 no-repeat center center fixed; }
+html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center fixed; }
 #bqqvid { display: none; }
 }
 
@@ -317,7 +317,7 @@ html { background: url(assets/BG_PRESENTATION) #000 no-repeat center center fixe
         <div class="position_content" id="u299_position_content">
          <div class="clearfix colelem" id="paccordionu5458"><!-- group -->
           <ul class="AccordionWidget clearfix grpelem" id="accordionu5458" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
-           <li class="AccordionPanel clearfix colelem" id="u5463"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u5464-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5464-3_0_content">&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem" id="u5465"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu5510"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u5511"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u5512" href="index.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u5515-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5515-4_0_content">Портфолио | Тимофей Малахов</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u5518"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u5519" href="about.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u5522-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5522-4_0_content">Обо мне</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u24853"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u24856" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u24857-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u24857-4_0_content">Контакты</p></div></a></div></nav></div></li>
+           <li class="AccordionPanel clearfix colelem" id="u5463"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u5464-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5464-3_0_content">&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem" id="u5465"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu5510"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u5511"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u5512" href="index.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u5515-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5515-4_0_content">Портфолио</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u5518"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u5519" href="about.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u5522-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u5522-4_0_content">Обо мне</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u24853"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u24856" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u24857-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p class="shared_content" data-content-guid="u24857-4_0_content">Контакты</p></div></a></div></nav></div></li>
           </ul>
           <div class="grpelem shared_content" id="u5920" data-sizePolicy="fluidWidth" data-pintopage="page_fixedLeft" data-content-guid="u5920_content"><!-- simple frame --></div>
           <span class="nonblock nontext MuseLinkActive transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
