--- a/test/fastfood-animation.html
+++ b/test/fastfood-animation.html
@@ -17,11 +17,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Шевелю Фастфуд | Векторный бургер</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=167251300"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=205806085" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=339867909"/>
+  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=4006526014" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=385965694"/>
   <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=65335609" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
@@ -117,7 +117,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <p class="shared_content" data-content-guid="u29534-4_0_content">+7 (996) 959-67-78</p>
          </div>
         </div>
-        <div class="transition grpelem shared_content" id="u9362" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u9362_content"><!-- simple frame --></div>
+        <a class="nonblock nontext transition grpelem shared_content" id="u9362" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u9362_content"><!-- simple frame --></a>
         <div class="clearfix grpelem" id="u29362"><!-- group -->
          <a class="nonblock nontext clip_frame grpelem" id="u29256" href="mailto:timofei.malakhov@yandex.ru" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29257" data-orig-src="images/003-yandex.svg?crc=3860152902" width="25" height="25" alt="" data-mu-svgfallback="images/003-yandex_poster_.png?crc=126775701" src="images/blank.gif?crc=4208392903" data-content-guid="u29257_content"/></a>
          <a class="nonblock nontext clip_frame grpelem" id="u29246" href="https://vk.com/malakhov_tm" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29247" data-orig-src="images/001-vk.svg?crc=146517475" width="25" height="25" alt="" data-mu-svgfallback="images/001-vk_poster_.png?crc=177367863" src="images/blank.gif?crc=4208392903" data-content-guid="u29247_content"/></a>
@@ -222,7 +222,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u380_align_to_page">
-        <span class="transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-orig-id="u29542"><!-- group -->
          <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u29250"><!-- svg -->
           <span class="svg placeholder" data-placeholder-for="u29251_content"><!-- placeholder node --></span>
@@ -306,7 +306,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u380_align_to_page">
-        <span class="transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-orig-id="u29542"><!-- group -->
          <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u29250"><!-- svg -->
           <span class="svg placeholder" data-placeholder-for="u29251_content"><!-- placeholder node --></span>
