--- a/test/index.html
+++ b/test/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Портфолио</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=167251300"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=201421338" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=339867909"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=374324391" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=238931959" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=385965694"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=189858819" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -147,9 +147,7 @@ transform-origin: 50% 50%;
          <div class="shadow rounded-corners project-pic grpelem" id="u3391"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
-         <div class="project-pic shadow museBGSize grpelem" id="u3568"><!-- simple frame -->
-          <div class="fluid_height_spacer"></div>
-         </div>
+         <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u3568" href="skyeng-lp.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
          <div class="project-pic shadow grpelem" id="u3563"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
@@ -165,7 +163,7 @@ transform-origin: 50% 50%;
          <div class="project-pic shadow grpelem" id="u17622"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
-         <div class="project-pic shadow grpelem" id="u17615"><!-- simple frame -->
+         <div class="project-pic shadow museBGSize grpelem" id="u17615"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
          <div class="project-pic shadow grpelem" id="u17606"><!-- simple frame -->
@@ -253,7 +251,7 @@ html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center 
           <p class="shared_content" data-content-guid="u29534-4_0_content">+7 (996) 959-67-78</p>
          </div>
         </div>
-        <div class="museBGSize transition grpelem shared_content" id="u9362" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u9362_content"><!-- simple frame --></div>
+        <a class="nonblock nontext MuseLinkActive museBGSize transition grpelem shared_content" id="u9362" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u9362_content"><!-- simple frame --></a>
         <div class="clearfix grpelem" id="u29362"><!-- group -->
          <a class="nonblock nontext clip_frame grpelem" id="u29256" href="mailto:timofei.malakhov@yandex.ru" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29257" data-orig-src="images/003-yandex.svg?crc=3860152902" width="25" height="25" alt="" data-mu-svgfallback="images/003-yandex_poster_.png?crc=126775701" src="images/blank.gif?crc=4208392903" data-content-guid="u29257_content"/></a>
          <a class="nonblock nontext clip_frame grpelem" id="u29246" href="https://vk.com/malakhov_tm" target="_blank" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- svg --><img class="svg temp_no_img_src shared_content" id="u29247" data-orig-src="images/001-vk.svg?crc=146517475" width="25" height="25" alt="" data-mu-svgfallback="images/001-vk_poster_.png?crc=177367863" src="images/blank.gif?crc=4208392903" data-content-guid="u29247_content"/></a>
@@ -346,7 +344,7 @@ html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center 
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u380_align_to_page">
-        <span class="museBGSize transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext MuseLinkActive museBGSize transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-orig-id="u29542"><!-- group -->
          <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u29250"><!-- svg -->
           <span class="svg placeholder" data-placeholder-for="u29251_content"><!-- placeholder node --></span>
@@ -405,13 +403,13 @@ html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center 
          <span class="h2 clearfix grpelem placeholder" data-placeholder-for="u3386-4_content"><!-- placeholder node --></span>
         </div>
         <div class="shadow rounded-corners project-pic colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3391"><!-- simple frame --></div>
-        <div class="project-pic shadow museBGSize colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3568"><!-- simple frame --></div>
+        <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="skyeng-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3568"><!-- simple frame --></a>
         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3563"><!-- simple frame --></div>
         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4432"><!-- simple frame --></a>
         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4424"><!-- simple frame --></a>
         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></div>
         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17622"><!-- simple frame --></div>
-        <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></div>
+        <div class="project-pic shadow museBGSize colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></div>
         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></div>
        </div>
       </div>
@@ -422,7 +420,7 @@ html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center 
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u380_align_to_page">
-        <span class="museBGSize transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext MuseLinkActive museBGSize transition colelem placeholder" data-placeholder-for="u9362_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-orig-id="u29542"><!-- group -->
          <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u29250"><!-- svg -->
           <span class="svg placeholder" data-placeholder-for="u29251_content"><!-- placeholder node --></span>
