--- a/test/index.html
+++ b/test/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Портфолио</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=339867909"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=374324391" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=171095111"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=256768970" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=385965694"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=189858819" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=73850937" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -67,7 +67,7 @@ transform-origin: 50% 50%;
  <div class="dot"></div>
 	
 <div id="kont">
-  <video  loop  autoplay muted poster="assets/BG_PRESENTATION.jpg" id="bqqvid">
+  <video  loop  autoplay muted poster="assets/" id="bqqvid">
     <source src="assets/bg.mp4" type="video/mp4">
     <source src="assets/bg.ogg" type="video/ogg">
     <source src="assets/bg.ogg" type="video/ogv">
@@ -184,7 +184,7 @@ video#bqqvid {
 position: fixed; right: 0; bottom: 0;
 min-width: 100%; min-height: 100%;
 width: auto; height: auto; z-index: -100;
-background: url(assets/BG_PRESENTATION.jpg) no-repeat;
+background: url(assets/) no-repeat;
 background-size: cover;
 }
 
@@ -225,7 +225,7 @@ z-index: -999;
 
 
 @media screen and (max-device-width: 800px) {
-html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center fixed; }
+html { background: url(assets/) #000 no-repeat center center fixed; }
 #bqqvid { display: none; }
 }
 
@@ -384,38 +384,40 @@ html { background: url(assets/BG_PRESENTATION.jpg) #000 no-repeat center center 
            <span class="nonblock nontext MuseLinkActive transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
           </div>
           <span class="size_fixed colelem placeholder" data-placeholder-for="u1726_content"><!-- placeholder node --></span>
-          <span class="size_fixed colelem placeholder" data-placeholder-for="u2075_content"><!-- placeholder node --></span>
-          <span class="clearfix colelem placeholder" data-placeholder-for="u533-6_content"><!-- placeholder node --></span>
+          <div class="clearfix colelem" id="pu533-6"><!-- group -->
+           <span class="clearfix grpelem placeholder" data-placeholder-for="u533-6_content"><!-- placeholder node --></span>
+           <span class="size_fixed grpelem placeholder" data-placeholder-for="u2075_content"><!-- placeholder node --></span>
+          </div>
           <span class="clearfix colelem placeholder" data-placeholder-for="u543-4_content"><!-- placeholder node --></span>
           <span class="nonblock nontext Button rounded-corners btns clearfix colelem placeholder" data-placeholder-for="buttonu1687_content"><!-- placeholder node --></span>
           <span class="nonblock nontext anim_swing arrow clip_frame colelem placeholder" data-placeholder-for="u2067_content"><!-- placeholder node --></span>
+          <span class="size_fixed colelem placeholder" data-placeholder-for="u3530_content"><!-- placeholder node --></span>
          </div>
         </div>
        </div>
       </div>
      </div>
      <div class="browser_width colelem temp_no_id" data-orig-id="u366-bw">
-      <div class="temp_no_id" data-orig-id="u366"><!-- column -->
+      <div class="temp_no_id" data-orig-id="u366"><!-- group -->
        <div class="clearfix temp_no_id" data-orig-id="u366_align_to_page">
-        <span class="size_fixed colelem placeholder" data-placeholder-for="u3530_content"><!-- placeholder node --></span>
-        <div class="clearfix colelem" id="pworks"><!-- group -->
-         <span class="anchor_item grpelem placeholder" data-placeholder-for="works_content"><!-- placeholder node --></span>
-         <span class="h2 clearfix grpelem placeholder" data-placeholder-for="u3386-4_content"><!-- placeholder node --></span>
+        <span class="anchor_item grpelem placeholder" data-placeholder-for="works_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem" id="pu3386-4"><!-- column -->
+         <span class="h2 clearfix colelem placeholder" data-placeholder-for="u3386-4_content"><!-- placeholder node --></span>
+         <div class="shadow rounded-corners project-pic colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3391"><!-- simple frame --></div>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="skyeng-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3568"><!-- simple frame --></a>
+         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3563"><!-- simple frame --></div>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4432"><!-- simple frame --></a>
+         <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4424"><!-- simple frame --></a>
+         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></div>
+         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17622"><!-- simple frame --></div>
+         <div class="project-pic shadow museBGSize colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></div>
+         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></div>
         </div>
-        <div class="shadow rounded-corners project-pic colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3391"><!-- simple frame --></div>
-        <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="skyeng-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3568"><!-- simple frame --></a>
-        <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u3563"><!-- simple frame --></div>
-        <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4432"><!-- simple frame --></a>
-        <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="alk-lp.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4424"><!-- simple frame --></a>
-        <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></div>
-        <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17622"><!-- simple frame --></div>
-        <div class="project-pic shadow museBGSize colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></div>
-        <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></div>
        </div>
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="3293" data-content-above-spacer="3293" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="3080" data-content-above-spacer="3079" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
